tests/samples/fallback-flow-bad-syntax.err
fallback-flow-bad-syntax.flow:6:Syntax error. "flow do\n  *say "What ".
