tests/samples/fallback-flow-bad-syntax.flow
flow greeting do
  say "Hello"
done

fallback flow do
  say "What did you mean?"
done
